kube-prometheus-stack/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressClassName: nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.17.0/24
  name: grafana-ingress
spec:
  tls:
    - hosts:
        - grafana.cg5labs.net
      secretName: grafana-tls
  rules:
  - host: grafana.cg5labs.net
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: grafana.cg5labs.ddns.net
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
